--- a/CSS/style.css
+++ b/CSS/style.css
@@ -3,4 +3,60 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: Arial, Helvetica, sans-serif;
 }
+
+body 
+{
+    display:flex;
+    flex-direction: column;
+    justify-content:center;
+    align-items:center;
+    height: 100vh;
+    background-color: gray;
+}
+
+#info 
+{
+    display: grid;
+    grid-template-columns:1fr 1fr;
+}
+
+#info div
+{
+    padding:3rem;
+    background:blue;
+    margin:1rem;
+    border-radius: 10px;
+    color:white;
+    font-size:1.2 rem;
+    text-align:center;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
